Demo button on mobile page fix
- The "Try demo on this page" button is not showing on the mobile version of the page anymore

--- a/css/main.css
+++ b/css/main.css
@@ -599,6 +599,9 @@ hr {
   .sec {
     width: 100%;
   }
+  .sec[onclick*="demo"] {
+    display: none;
+  }
 }
 .sp {
   background-color: transparent;
